[NTP] Fix custom links for third-party NTPs

Do not show custom links for third-party NTPs. Instead, return the
regular Most Visited tiles.

Bug: 881781
Change-Id: Ifd2f587bd60d6ca2a54dcb262874c2b292bf24af
Reviewed-on: https://chromium-review.googlesource.com/1220480
Commit-Queue: Kristi Park <kristipark@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591072}
Former-commit-id: f8fa4133861ab567647f6ccb320195628761793d