components/ntp_tiles/most_visited_sites.cc
@@ -218,7 +218,7 @@ void MostVisitedSites::RefreshHomepageTile() {
 }
 
 void MostVisitedSites::InitializeCustomLinks() {
-  if (!custom_links_ || !current_tiles_.has_value())
+  if (!custom_links_ || !current_tiles_.has_value() || !custom_links_enabled_)
     return;
 
   if (custom_links_->Initialize(current_tiles_.value()))
@@ -226,7 +226,7 @@ void MostVisitedSites::InitializeCustomLinks() {
 }
 
 void MostVisitedSites::UninitializeCustomLinks() {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return;
 
   custom_links_->Uninitialize();
@@ -235,15 +235,22 @@ void MostVisitedSites::UninitializeCustomLinks() {
 }
 
 bool MostVisitedSites::IsCustomLinksInitialized() {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return false;
 
   return custom_links_->IsInitialized();
 }
 
+void MostVisitedSites::EnableCustomLinks(bool enable) {
+  if (custom_links_enabled_ != enable) {
+    custom_links_enabled_ = enable;
+    BuildCurrentTiles();
+  }
+}
+
 bool MostVisitedSites::AddCustomLink(const GURL& url,
                                      const base::string16& title) {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return false;
 
   bool success = custom_links_->AddLink(url, title);
@@ -255,7 +262,7 @@ bool MostVisitedSites::AddCustomLink(const GURL& url,
 bool MostVisitedSites::UpdateCustomLink(const GURL& url,
                                         const GURL& new_url,
                                         const base::string16& new_title) {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return false;
 
   bool success = custom_links_->UpdateLink(url, new_url, new_title);
@@ -265,7 +272,7 @@ bool MostVisitedSites::UpdateCustomLink(const GURL& url,
 }
 
 bool MostVisitedSites::DeleteCustomLink(const GURL& url) {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return false;
 
   bool success = custom_links_->DeleteLink(url);
@@ -275,7 +282,7 @@ bool MostVisitedSites::DeleteCustomLink(const GURL& url) {
 }
 
 void MostVisitedSites::UndoCustomLinkAction() {
-  if (!custom_links_)
+  if (!custom_links_ || !custom_links_enabled_)
     return;
 
   if (custom_links_->UndoAction())
@@ -355,7 +362,7 @@ void MostVisitedSites::OnMostVisitedURLsAvailable(
     const history::MostVisitedURLList& visited_list) {
   // Ignore the event if tiles are provided by the Suggestions Service or custom
   // links, which take precedence.
-  if ((custom_links_ && custom_links_->IsInitialized()) ||
+  if (IsCustomLinksInitialized() ||
       mv_source_ == TileSource::SUGGESTIONS_SERVICE) {
     return;
   }
@@ -390,7 +397,7 @@ void MostVisitedSites::OnSuggestionsProfileChanged(
     const SuggestionsProfile& suggestions_profile) {
   // Ignore the event if tiles are provided by custom links, which take
   // precedence.
-  if ((custom_links_ && custom_links_->IsInitialized()) ||
+  if (IsCustomLinksInitialized() ||
       (suggestions_profile.suggestions_size() == 0 &&
        mv_source_ != TileSource::SUGGESTIONS_SERVICE)) {
     return;
@@ -400,7 +407,7 @@ void MostVisitedSites::OnSuggestionsProfileChanged(
 }
 
 void MostVisitedSites::BuildCurrentTiles() {
-  if (custom_links_ && custom_links_->IsInitialized()) {
+  if (IsCustomLinksInitialized()) {
     BuildCustomLinks(custom_links_->GetLinks());
     return;
   }
@@ -621,7 +628,8 @@ NTPTilesVector MostVisitedSites::InsertHomeTile(
 void MostVisitedSites::OnCustomLinksChanged() {
   DCHECK(custom_links_);
   DCHECK(custom_links_->IsInitialized());
-  BuildCustomLinks(custom_links_->GetLinks());
+  if (custom_links_enabled_)
+    BuildCustomLinks(custom_links_->GetLinks());
 }
 
 void MostVisitedSites::BuildCustomLinks(
